# infra

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CNAME  Justfile  LICENSE  README.md  digger.yml  mkdocs.yml  renovate.json  requirements.txt  trivy.yaml  versions.json
.github/: dependabot.yml
.github/workflows/: build-docker.yml  ci.yml  digger-workflow.yml  sync.yml
actions/build-docker/: action.yml
ansible/: ansible.cfg  install-docker.yml  requirements.txt  requirements.yml
ansible/dns-server/: haproxy.cfg
ansible/hetzner/: main.yml  vars.yml
ansible/inventory/: hetzner-personal.yml  localhost.yml  newsletter-server.hcloud.yml  raspberry-pi.yml
ansible/localhost/: main.yml  vars.yml
ansible/newsletter-server/: blocked_subnets.lst  blocklist_hosts.lst  blocklist_ips.lst  haproxy.cfg  haproxy.service  install-upgrade-k3s.sh  main.yml  vars.yml  (+5 more)
applications/listmonk-exporter/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
applications/listmonk-exporter/kustomization/: configs.env  deployment.yml  externalsecret.yml  kustomization.yml  service.yml  vmrule.yml
applications/reddit-submission/: main.py  pyproject.toml
applications/reddit-submission/migrations/: env.py
applications/reddit-submission/migrations/versions/: 01_create_the_submissions_table.py
edge/: 404.html  index.html
live/: github.hcl  provider_aws.hcl  provider_cloudflare.hcl  provider_github.hcl  provider_hetzner.hcl  terragrunt.hcl
scripts/: import-cloudflare-resources.sh  install-cilium.sh  install-gateway-api.sh
terragrunt/: terragrunt.hcl
(+1109 files in other folders)
